# historia

./: .gitignore  .travis.yml  1993  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Jenkinsfile  Jenkinsfile.gitian  Makefile.am  README.md  authors.txt  configure.ac  gcc_Debug.h  libhistoriaconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
ci/: Dockerfile.builder  Dockerfile.gitian-builder  build_src.sh  matrix.sh  test_integrationtests.sh  test_unittests.sh
contrib/: README.md  gitian-build.py  historia-cli.bash-completion  historia-qt.pro  historia-tx.bash-completion  historiad.bash-completion  qt_translations.py  tidy_datadir.sh
depends/: README.md
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  benchmarking.md  build-cross.md  build-generic.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  tor.md  (+13 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  amount.cpp  amount.h  base58.cpp  base58.h  batchedlogger.h  bip39.h  bip39_english.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  client.cc  client.h  clientversion.cpp  clientversion.h  coins.h  compat.h  dsnotificationinterface.cpp  gcc_Release.h  governance-classes.cpp  governance-classes.h  governance-object.cpp  governance-object.h  governance-validators.cpp  governance-validators.h  governance-vote.cpp  governance-vote.h  governance.cpp  governance.h  hash.cpp  hash.h  (+64 more)
src/algo/: sph_sha2.h
src/bench/: .gitignore  crypto_hash.cpp
src/bls/: bls.h  bls_batchverifier.h  bls_ies.h  bls_worker.cpp  bls_worker.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: consensus.h  params.h
src/crypto/: aes.cpp  aes.h  aes_helper.c  common.h  groestl.c  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h
src/crypto/ethash/include/ethash/: keccak.hpp  progpow.hpp
src/crypto/ethash/lib/ethash/: endianness.hpp
src/crypto/ethash/lib/keccak/: keccakf800.c
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.h  governance-types.cpp  governance-types.h
src/evo/: cbtx.h  deterministicmns.cpp  deterministicmns.h  evodb.h  mnauth.h  providertx.cpp  providertx.h  simplifiedmns.h  specialtx.h
src/llmq/: quorums.cpp  quorums.h  quorums_blockprocessor.h  quorums_chainlocks.h  quorums_commitment.h  quorums_debug.h  quorums_dkgsession.cpp  quorums_dkgsession.h  quorums_dkgsessionhandler.cpp  quorums_dkgsessionhandler.h  quorums_dkgsessionmgr.cpp  quorums_dkgsessionmgr.h  quorums_init.h  quorums_instantsend.h  quorums_signing.h  quorums_signing_shares.h  quorums_utils.h
src/primitives/: block.cpp  block.h
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  darksendconfig.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  historia.cpp  historia.qrc  historia_locale.qrc  historiastrings.cpp  intro.cpp  macdockiconhandler.mm  macnotificationhandler.mm  macos_appnap.mm  masternodelist.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  paymentserver.h  proposalspage.cpp  proposalspage.h  qrdialog.cpp  receiverequestdialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  (+12 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  proposalspage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: historia_ar.ts  historia_bg.ts  historia_de.ts  historia_en.ts  historia_es.ts  historia_fi.ts  historia_fr.ts  historia_it.ts  historia_ja.ts  historia_ko.ts  historia_nl.ts  historia_pl.ts  historia_pt.ts  historia_ru.ts  historia_sk.ts  historia_sv.ts  historia_th.ts  historia_tr.ts  historia_vi.ts  historia_zh_CN.ts  historia_zh_TW.ts
src/qt/res/: historia-qt-res.rc
src/qt/res/css/: crownium.css  drkblue.css  light-hires-retro.css  light-hires.css  light-retro.css  light.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: Makefile  rpcnestedtests.cpp  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  rpcevo.cpp  server.cpp  server.h
src/script/: historiaconsensus.cpp  historiaconsensus.h  standard.cpp  standard.h
src/support/: lockedpool.cpp  pagelocker.cpp
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bls_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  evo_deterministicmns_tests.cpp  evo_simplifiedmns_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  kawpow_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  (+35 more)
src/test/data/: README.md  bitcoin-util-test.json  proposals-invalid.json  proposals-valid.json  proposals_invalid.json  proposals_valid.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp
src/wallet/: rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/wallet/test/: crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqconfig.h
(+161 files in other folders)
